<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">fows</string>
    <string name="register">Zarejestruj się</string>
    <string name="agenda">Agenda</string>
    <string name="prelegents">Prelegenci</string>
    <string name="sponsors">Sponsorzy i patroni</string>
    <string name="contest">Konkurs</string>
    <string name="map">Mapa</string>
    <string name="information">o Konferencji</string>
    <string name="links">Linki</string>

    <!--Activites Titles-->
    <string name="activity_prelegent_details_title">Speaker</string>
    <string name="test_string">Lorem ipsum dolor sit amet, et vis noluisse mandamus definitiones, quo aeque dicit ne. Pro unum discere corrumpit te, ius eu lorem animal corpora. Quodsi propriae ei vel. Eu has atqui oportere efficiendi, vis sumo sonet appareat eu. No quem elit liber eum. Munere quaeque scripserit nec ut, tempor eirmod mel ne, ea nisl choro rationibus cum. Pri legere graece aperiri et, ei quo nibh mazim. Pro debet labores verterem an, odio nulla usu et. Ut timeam dolorem albucius mel, vim graeco mentitum cotidieque ut. No inani theophrastus concludaturque mei.</string>

    <!--Error messages-->
    <string name="error_default_message">An error occurred</string>
</resources>